--- a/app/src/main/res/layout/add_to_cart_pop_up.xml
+++ b/app/src/main/res/layout/add_to_cart_pop_up.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="12dp"
         android:gravity="center"
         android:text="@string/price"
+        android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -65,6 +66,7 @@
         android:gravity="center"
         android:hint="@string/enterQuantity"
         android:inputType="number"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
