--- a/app/src/main/res/layout/activity_enthusiast_p_c.xml
+++ b/app/src/main/res/layout/activity_enthusiast_p_c.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".CasualPCActivity">
+    tools:context=".EnthusiastPCActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -33,7 +33,7 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/scrolling_casual_pc" />
+    <include layout="@layout/scrolling_enthusiast" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
